--- a/src/dev-env.yml
+++ b/src/dev-env.yml
@@ -158,3 +158,7 @@ AUTHENTICATION:
 # Configure to chatwoot
 CHATWOOT:
   USE_REPLY_ID: false
+
+# Configure to chatnode
+CHATNODE:
+  API_KEY: false
