--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start:prod": "bash start.sh",
     "dev:server": "clear && tsnd --files --transpile-only --respawn --ignore-watch node_modules ./src/main.ts",
     "test": "clear && tsnd --files --transpile-only --respawn --ignore-watch node_modules ./test/all.test.ts",
-    "postinstall": "patch-package",
     "lint": "eslint --fix --ext .ts src"
   },
   "repository": {
@@ -47,7 +46,7 @@
     "@figuro/chatwoot-sdk": "^1.1.16",
     "@hapi/boom": "^10.0.1",
     "@sentry/node": "^7.59.2",
-    "@whiskeysockets/baileys": "github:PurpShell/Baileys#combined",
+    "@whiskeysockets/baileys": "^6.6.0",
     "amqplib": "^0.10.3",
     "aws-sdk": "^2.1499.0",
     "axios": "^1.3.5",
@@ -73,14 +72,13 @@
     "node-cache": "^5.1.2",
     "node-mime-types": "^1.1.0",
     "node-windows": "^1.0.0-beta.8",
-    "patch-package": "^8.0.0",
     "pg": "^8.11.3",
     "pino": "^8.11.0",
     "proxy-agent": "^6.3.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "redis": "^4.6.5",
-    "sharp": "^0.30.7",
+    "sharp": "^0.32.2",
     "socket.io": "^4.7.1",
     "socks-proxy-agent": "^8.0.1",
     "swagger-ui-express": "^5.0.0",
